# obs-placeholder

./: BUILDING.md  CMakeLists.txt  README.md  buildspec.json
.github/scripts/: .Brewfile.lock.json
CI/: build-macos.sh  install-build-obs-macos.sh  install-dependencies-macos.sh  package-macos.sh
CI/macos/: obs-placeholder.pkgproj
data/locale/: en-US.ini
installer/: installer.iss
src/: obs-placeholder.cpp  obs-placeholder.h  plugin-macros.generated.h
src/forms/: CMakeLists.txt  PlaceHolder_en_US.ts  dialog.cpp  dialog.h  dialog.ui  ui_dialog.h
